--- a/think-content/package.json
+++ b/think-content/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -16,15 +17,23 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
+    "headlessui": "^0.0.0",
     "jest": "^29.4.3",
     "next": "13.1.6",
+    "re-resizable": "^6.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.7.1",
+    "react-resizable": "^3.0.4",
+    "react-resize": "^0.4.0",
+    "resizable": "^1.2.1",
+    "text-gradient": "^0.2.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-resizable": "^3.0.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwind-scrollbar": "^2.1.0",
