testing new auth

--- a/think-content/.vscode/settings.json
+++ b/think-content/.vscode/settings.json
@@ -3,5 +3,6 @@
     
     "editor.quickSuggestions": {
         "strings": true
-    }
+    },
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
