--- a/think-content/package.json
+++ b/think-content/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/open-sans": "^4.5.14",
     "@headlessui/react": "^1.7.13",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
@@ -17,6 +22,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
+    "framer-motion": "^10.2.3",
     "headlessui": "^0.0.0",
     "jest": "^29.4.3",
     "next": "13.1.6",
@@ -24,10 +30,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
+    "react-firebase-hooks": "^5.1.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.7.1",
     "react-resizable": "^3.0.4",
     "react-resize": "^0.4.0",
+    "recoil": "^0.7.7",
     "resizable": "^1.2.1",
     "text-gradient": "^0.2.0",
     "typescript": "4.9.5"
