--- a/think-content/package.json
+++ b/think-content/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^10.2.3",
     "headlessui": "^0.0.0",
     "jest": "^29.4.3",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "re-resizable": "^6.9.9",
     "react": "18.2.0",
@@ -32,16 +33,18 @@
     "react-draggable": "^4.4.5",
     "react-firebase-hooks": "^5.1.1",
     "react-fontawesome": "^1.7.1",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-resizable": "^3.0.4",
     "react-resize": "^0.4.0",
     "recoil": "^0.7.7",
     "resizable": "^1.2.1",
+    "safe-json-stringify": "^1.2.0",
     "text-gradient": "^0.2.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@types/react-resizable": "^3.0.3",
+    "@types/safe-json-stringify": "^1.1.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwind-scrollbar": "^2.1.0",
