--- a/think-content/package.json
+++ b/think-content/package.json
@@ -40,7 +40,8 @@
     "resizable": "^1.2.1",
     "safe-json-stringify": "^1.2.0",
     "text-gradient": "^0.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react-resizable": "^3.0.3",
