--- a/think-content/package.json
+++ b/think-content/package.json
@@ -19,6 +19,8 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "chakra-react-select": "^4.6.0",
+    "chakra-ui-autocomplete": "^1.4.5",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
