--- a/think-content/package.json
+++ b/think-content/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/open-sans": "^4.5.14",
+    "@fontsource/source-sans-pro": "^4.5.11",
     "@headlessui/react": "^1.7.13",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
