--- a/think-content/functions/package.json
+++ b/think-content/functions/package.json
@@ -14,12 +14,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "firebase-functions-test": "^3.0.0"
+    "firebase-functions-test": "^3.0.0",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
