--- a/think-content/package.json
+++ b/think-content/package.json
@@ -30,6 +30,7 @@
     "jest": "^29.4.3",
     "moment": "^2.29.4",
     "next": "13.1.6",
+    "nextjs-progressbar": "^0.0.16",
     "re-resizable": "^6.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
