--- a/think-content/package.json
+++ b/think-content/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
@@ -27,7 +28,8 @@
     "firebase": "^9.17.1",
     "framer-motion": "^10.2.3",
     "headlessui": "^0.0.0",
-    "jest": "^29.4.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.5.0",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "nextjs-progressbar": "^0.0.16",
@@ -48,9 +50,16 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
     "@types/react-resizable": "^3.0.3",
     "@types/safe-json-stringify": "^1.1.2",
     "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
     "postcss": "^8.4.21",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7"
