Set up testing/emulators for auth, functions and firestore

--- a/think-content/package.json
+++ b/think-content/package.json
@@ -14,6 +14,8 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@firebase/rules-unit-testing": "^2.0.7",
+    "@firebase/testing": "^0.20.11",
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/source-sans-pro": "^4.5.11",
     "@headlessui/react": "^1.7.13",
