--- a/think-content/functions/package.json
+++ b/think-content/functions/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.0.3",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.3.1",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.0.0",
