--- a/think-content/functions/package.json
+++ b/think-content/functions/package.json
@@ -14,11 +14,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.3.1",
+    "firebase-functions": "^4.4.0",
     "nodemailer": "^6.9.1",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "pexels": "^1.4.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.0.0",
