--- a/think-content/package.json
+++ b/think-content/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^4.8.0",
     "react-resizable": "^3.0.4",
     "react-resize": "^0.4.0",
+    "react-tabs": "^6.0.1",
     "recoil": "^0.7.7",
     "resizable": "^1.2.1",
     "safe-json-stringify": "^1.2.0",
