--- a/think-content/package.json
+++ b/think-content/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
-    "@chakra-ui/react": "^2.5.1",
+    "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@firebase/rules-unit-testing": "^2.0.7",
@@ -44,6 +44,7 @@
     "react-icons": "^4.8.0",
     "react-resizable": "^3.0.4",
     "react-resize": "^0.4.0",
+    "react-scroll": "^1.8.9",
     "react-tabs": "^6.0.1",
     "recoil": "^0.7.7",
     "resizable": "^1.2.1",
@@ -59,6 +60,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.1",
     "@types/react-resizable": "^3.0.3",
+    "@types/react-scroll": "^1.8.7",
     "@types/safe-json-stringify": "^1.1.2",
     "autoprefixer": "^10.4.13",
     "babel-jest": "^29.5.0",
